--- a/css/styleGlobal.css
+++ b/css/styleGlobal.css
@@ -20,6 +20,13 @@ header{
     box-shadow: 0px 0px 20px -10px black;
 }
 
+nav{
+    display: flex;
+}
+
+.icone-menu-lateral{
+    display: none;
+}
 h1{
     font-size: 30px;
     color: rgba(2, 61, 2, 0.555);
@@ -201,5 +208,77 @@ button:hover{
     transition: 0.5s;
     color: rgba(0, 0, 255, 0.504);
 }
+
+.sessao_content-3{
+    display: flex;
+    gap: 10px;
+    padding: 20px;
+    margin-top: 30px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.icones-contato{
+    margin: 20px;
+    height: 70px;
+}
+
+footer{
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    background-color: rgba(0, 0, 255, 0.504);
+}
+
+footer p{
+    font-size: 12px;
+    font-weight: bold;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: white;
+}
 /* Responsividade MOBILE */
+
+/* Estilo para o menu lateral no mobile */
+.menu-lateral-mobile {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 250px;  /* Largura do menu */
+    height: 100vh;
+    background-color: #fff;
+    box-shadow: 2px 0px 10px rgba(0, 0, 0, 0.1);
+    transform: translateX(-100%); /* Começa fora da tela */
+    transition: transform 0.3s ease; /* Transição suave */
+    z-index: 1000;
+}
+
+/* Exibe o menu quando o "menu" for aberto */
+.menu-lateral-mobile.open {
+    transform: translateX(0); /* Coloca o menu na tela */
+}
+
+/* Estilo do ícone do menu */
+.icone-menu-lateral {
+    display: block;  /* Torna o ícone visível */
+    cursor: pointer;
+}
+
+/* Estilos dos itens do menu */
+.container-menu-lateral-list ul li {
+    list-style: none;
+    margin-top: 20px;
+    font-size: 22px;
+    font-weight: bold;
+    color: rgba(0, 0, 255, 0.504);
+    cursor: pointer;
+    transition: color 0.3s ease;
+}
+
+.container-menu-lateral-list ul li:hover {
+    color: rgba(0, 0, 255, 0.8);  /* Altere a cor ao passar o mouse */
+}
 
