--- a/css/styleMobile.css
+++ b/css/styleMobile.css
@@ -2,12 +2,20 @@
 
 @media screen and (min-width: 320px) and (max-width: 480px){
 
+    .icone-menu-lateral{
+        display: flex;
+    }
+
+    nav ul li{
+      display: none;
+    }
+
     .imagem-perfil{
         height: 250px;
     }
 
     .resumo{
-        padding-right: 50px;
+        padding-right: 40px;
     }
 
     h1{
