--- a/css/styleGlobal.css
+++ b/css/styleGlobal.css
@@ -9,8 +9,8 @@
 
 html, body{
     background-color: #ffffffe8;
-    overflow-x: hidden; /* Impede a rolagem horizontal */
-    width: 100%; /* Garante que a largura seja 100% */
+    overflow-x: hidden;
+    width: 100%;
 }
 
 header{
@@ -21,14 +21,14 @@ header{
     align-items: center;
     justify-content: space-around;
     box-shadow: 0px 0px 20px -10px black;
-    background-color: transparent;  /* Inicialmente transparente */
-    transition: background-color 0.3s ease;  /* Suaviza a transição do fundo */
+    background-color: transparent;
+    transition: background-color 0.3s ease;
 }
 
 header.bg-white {
     background-color: white;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Um pouco mais forte para o efeito */
-    z-index: 10; /* Certifique-se de que o header esteja acima de outros elementos */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    z-index: 10;
 }
 
 
@@ -100,6 +100,7 @@ nav ul li:hover{
 }
 
 .logo-whatsapp{
+    display: none;
     height: 40px;
     position: fixed;
     top: 93%;
@@ -266,6 +267,13 @@ button:hover{
 
 .icones-contato:hover{
     transform: scale(1.2);
+}
+
+.container-form{
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
 }
 
 footer{
