--- a/css/styleGlobal.css
+++ b/css/styleGlobal.css
@@ -229,6 +229,11 @@ a:hover{
 .container-projeto-content{
     margin-top: 20px;
     border: 3px solid rgba(0, 0, 0, 0.214);
+    transition: all 0.2s ease-in-out;
+}
+
+.container-projeto-content:hover{
+    transform: scale(1.1);
 }
 
 button{
