Ajuste de formulário

--- a/css/styleGlobal.css
+++ b/css/styleGlobal.css
@@ -281,6 +281,49 @@ button:hover{
     justify-content: center;
 }
 
+.sessao-form{
+    top: 0;
+    position: fixed;
+    display: none;
+    height: 100%;
+    width: 100%;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: black;
+    opacity: 0.5;
+}
+.container-form{
+    display: flex;
+    height: 100%;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-form form{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    position: relative;
+    background-color: rgb(17, 17, 117);
+    padding: 50px;
+    border-radius: 20px;
+    height: 300px;
+    flex-direction: column;
+}
+
+.campos input{
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+.sessao-form line{
+    margin-bottom: 50px;
+    text-align: center;
+}
+
 footer{
     display: flex;
     text-align: center;
