Ajuste de formulário de contato

--- a/css/styleGlobal.css
+++ b/css/styleGlobal.css
@@ -274,44 +274,49 @@ button:hover{
     transform: scale(1.2);
 }
 
-.container-form{
+.container-bg{
     display: flex;
     text-align: center;
     align-items: center;
     justify-content: center;
 }
 
-.sessao-form{
+#container-form-bg{
     top: 0;
-    position: fixed;
     display: none;
+    position: fixed;
     height: 100%;
     width: 100%;
-    align-items: center;
     text-align: center;
+    align-items: center;
     justify-content: center;
-    flex-direction: column;
     background-color: black;
-    opacity: 0.5;
-}
-.container-form{
-    display: flex;
-    height: 100%;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
+    opacity: 0.8;
 }
 
-.container-form form{
+#container-form-bg #form{
+    gap: 5px;
     display: flex;
-    justify-content: center;
     text-align: center;
-    position: relative;
-    background-color: rgb(17, 17, 117);
-    padding: 50px;
-    border-radius: 20px;
-    height: 300px;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
+    height: 400px;
+    width: 600px;
+    background-color: rgb(52, 52, 245);
+}
+
+.teste{
+    display: flex;
+    height: 100%;
+    top: 50%;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+.btn-fechar-form{
+    height: 40px;
+    cursor: pointer;
 }
 
 .campos input{
