--- a/css/styleGlobal.css
+++ b/css/styleGlobal.css
@@ -153,7 +153,7 @@ a:hover{
 }
 
 .imagem-perfil{
-    height: 650px;
+    height: 350px;
 }
 
 .resumo{
@@ -230,6 +230,7 @@ a:hover{
     margin-top: 20px;
     border: 3px solid rgba(0, 0, 0, 0.214);
     transition: all 0.2s ease-in-out;
+    /* visibility: hidden; */
 }
 
 .container-projeto-content:hover{
